// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Player component with default values 1`] = `
<Fragment>
  <WithStyles(ForwardRef(IconButton))
    className="prevBtn fas fa-backward"
    onClick={[Function]}
  />
  <WithStyles(ForwardRef(IconButton))
    className="playBtn fas fa-play"
    onClick={[Function]}
  />
  <WithStyles(ForwardRef(IconButton))
    className="nextBtn fas fa-forward"
    onClick={[Function]}
  />
  <WithStyles(ForwardRef(IconButton))
    className="likeBtn far fa-heart"
    onClick={[Function]}
  />
</Fragment>
`;

exports[`Test Player component with set values 1`] = `
<Fragment>
  <WithStyles(ForwardRef(IconButton))
    className="prevBtn fas fa-backward"
    onClick={[Function]}
  />
  <WithStyles(ForwardRef(IconButton))
    className="playBtn fas fa-pause"
    onClick={[Function]}
  />
  <WithStyles(ForwardRef(IconButton))
    className="nextBtn fas fa-forward"
    onClick={[Function]}
  />
  <WithStyles(ForwardRef(IconButton))
    className="likeBtn fas fa-heart"
    onClick={[Function]}
  />
</Fragment>
`;
